[gd_scene load_steps=3 format=3 uid="uid://dwje2hpsc7i1l"]

[ext_resource type="Script" path="res://scenes/MoveCountBoard.gd" id="1_fvtm5"]
[ext_resource type="Texture2D" uid="uid://0uhfwjik7g4y" path="res://assets/MoveCounter_2digits.png" id="2_wd4op"]

[node name="MoveCountBoard" type="Control"]
custom_minimum_size = Vector2(47, 43)
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_fvtm5")

[node name="MovesBackground" type="TextureRect" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_wd4op")

[node name="MovesLabel" type="Label" parent="MovesBackground"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 28
text = "Moves"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="MovesBackground"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="HBoxContainer" type="HBoxContainer" parent="MovesBackground/MarginContainer"]
layout_mode = 2

[node name="thousands" type="Label" parent="MovesBackground/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_font_sizes/font_size = 56
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="hundreds" type="Label" parent="MovesBackground/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_font_sizes/font_size = 56
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="tens" type="Label" parent="MovesBackground/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_font_sizes/font_size = 56
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ones" type="Label" parent="MovesBackground/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_font_sizes/font_size = 56
text = "0"
horizontal_alignment = 1
vertical_alignment = 1
